--- a/publication_list.bib
+++ b/publication_list.bib
@@ -17,7 +17,7 @@
       booktitle   =  ARXIV,
       html={https://arxiv.org/abs/2509.23258},
       pdf={https://arxiv.org/pdf/2509.23258}, 
-      img={assets/img/publications/oraclegs.jpg},
+      img={assets/img/pdf/oraclegs.jpg},
       supp={assets/pdf/oraclegs_supp.pdf},
 }
 
@@ -31,6 +31,6 @@
       html={https://arxiv.org/abs/2509.26398}, 
       pdf={https://arxiv.org/pdf/2509.26398}, 
       img={assets/img/publications/imagedifficultyawareevaluationsuperresolutionmodels.jpg},
-      poster={assets/img/publications/imagedifficultyawareevaluationsuperresolutionmodels.pdf},
+      poster={assets/img/pdf/imagedifficultyawareevaluationsuperresolutionmodels.pdf},
       video={https://youtu.be/0orSH7C6W8o},
 }
