Fix missing image in oraclegs

--- a/publication_list.bib
+++ b/publication_list.bib
@@ -17,7 +17,7 @@
       booktitle   =  ARXIV,
       html={https://arxiv.org/abs/2509.23258},
       pdf={https://arxiv.org/pdf/2509.23258}, 
-      img={assets/img/pdf/oraclegs.jpg},
+      img={assets/img/publications/oraclegs.jpg},
       supp={assets/pdf/oraclegs_supp.pdf},
 }
 
