Added support for equal contributions in publications

--- a/publication_list.bib
+++ b/publication_list.bib
@@ -19,6 +19,7 @@
       pdf={https://arxiv.org/pdf/2509.23258}, 
       img={assets/img/publications/oraclegs.jpg},
       supp={assets/pdf/oraclegs_supp.pdf},
+
 }
 
 @misc{topaloglu2025imagedifficultyawareevaluationsuperresolutionmodels,
@@ -33,4 +34,5 @@
       img={assets/img/publications/imagedifficultyawareevaluationsuperresolutionmodels.jpg},
       poster={assets/pdf/imagedifficultyawareevaluationsuperresolutionmodels.pdf},
       video={https://youtu.be/0orSH7C6W8o},
+      equal_contribution={2},
 }
