--- a/publication_list.bib
+++ b/publication_list.bib
@@ -9,6 +9,7 @@
 @STRING{IROS = {Proc. of the International Conf. on Intelligent Robots and Systems (IROS)}}
 @STRING{RAL = {IEEE Robotics and Automation Letters (RA-L)}}
 @STRING{WACV = {Proc. of the IEEE Winter Conf. on Applications of Computer Vision (WACV)}}
+@STRING{ICIPW = {Proc. of the IEEE International Conf. on Image Processing Workshop (ICIPW)}}
 
 @misc{topaloglu2025oraclegsgroundinggenerativepriors,
       title={OracleGS: Grounding Generative Priors for Sparse-View Gaussian Splatting}, 
@@ -27,7 +28,7 @@
       author={Atakan Topaloglu and Ahmet Bilican and Cansu Korkmaz and A. Murat Tekalp},
       year={2025},
       eprint={2509.26398},
-      booktitle   =  ARXIV,
+      booktitle   =  ICIPW,
       primaryClass={cs.CV},
       html={https://arxiv.org/abs/2509.26398}, 
       pdf={https://arxiv.org/pdf/2509.26398}, 
