Optimized for mobile layout with centering and profile image at top, images slightly smaller to save vertical space

--- a/publication_list.bib
+++ b/publication_list.bib
@@ -3,7 +3,7 @@
 @STRING{ICCV = {Proc. of the IEEE International Conf. on Computer Vision (ICCV)}}
 @STRING{THREEDV = {Proc. of the International Conf. on 3D Vision (3DV)}}
 @STRING{NEURIPS = {Advances in Neural Information Processing Systems (NeurIPS)}}
-@STRING{ARXIV = {arXiv.org}}
+@STRING{ARXIV = {arXiv preprint}}
 @STRING{BMVC = {Proc. of the British Machine Vision Conference (BMVC)}}
 @STRING{ICLR = {Proc. of the International Conf. on Learning Representations (ICLR)}}
 @STRING{IROS = {Proc. of the International Conf. on Intelligent Robots and Systems (IROS)}}
