--- a/projects.bib
+++ b/projects.bib
@@ -1,6 +1,6 @@
 @misc{3dgs_sam2,
     title = {3D Semantic Segmentation with SAM2 Memory Bank},
-    description = {We noticed that <a href="https://github.com/weijielyu/Gaga" target="_blank">GaGa</a> (Lyu et al.) repeatedly labeled the same objects when revisiting regions, especially textureless regions, such as walls, failing to maintain consistency across views. To address this, we leveraged the existing SAM2 memory bank and used our dense images and pose-based image warping combined with IoU matching to project previous masks onto new viewpoints. This simple approach enforced mask consistency in indoor scenes with "loop closure", reducing duplicate labeling especially in textureless regions.},
+    description = {We noticed that <a href="https://github.com/weijielyu/Gaga" target="_blank">GaGa</a> (Lyu et al.) repeatedly labeled the same objects when revisiting regions, especially textureless regions, such as walls, failing to maintain consistency across views. To address this, we leveraged the existing SAM2 memory bank and used our dense images and pose-based image warping to project previous masks onto new viewpoints. This simple approach enforced mask consistency in indoor scenes with "loop closure", reducing duplicate labeling especially in textureless regions.},
     img = {assets/img/project/3dgs_gaga.png},
     private = {true},
     video = {}, 
@@ -16,7 +16,7 @@
 
 @misc{bim_poc,
     title = {Building Information Modelling (BIM) PoC on CPU},
-    description = {Developed a proof-of-concept for a Building Information Modeling viewer designed to run efficiently on consumer-grade hardware. This demonstration runs smoothly on an 8th GenIntel i5 CPU (4 cores, 8 GB RAM, 2.8 GHz) with no dedicated GPU.},
+    description = {Developed a proof-of-concept for a Building Information Modeling viewer designed to run efficiently on consumer-grade hardware. This demonstration runs smoothly on an 8th Gen Intel i5 CPU (4 cores, 8 GB RAM, 2.8 GHz) with no dedicated GPU.},
     img = {assets/img/project/3dgs_bim.png},
     private = {true},
     video = {},
