Added oraclegs and removed artefect keys if the fields are empty

--- a/publication_list.bib
+++ b/publication_list.bib
@@ -16,10 +16,11 @@
       author={Atakan Topaloglu and Kunyi Li and Michael Niemeyer and Nassir Navab and A. Murat Tekalp and Federico Tombari},
       year={2025},
       booktitle   =  ARXIV,
-      html={https://arxiv.org/abs/2509.23258},
+      html={https://atakan-topaloglu.github.io/oraclegs/},
       pdf={https://arxiv.org/pdf/2509.23258}, 
       img={assets/img/publications/oraclegs.jpg},
       supp={assets/pdf/oraclegs_supp.pdf},
+      
 
 }
 
@@ -30,7 +31,7 @@
       eprint={2509.26398},
       booktitle   =  ICIPW,
       primaryClass={cs.CV},
-      html={https://arxiv.org/abs/2509.26398}, 
+      html={}, 
       pdf={https://arxiv.org/pdf/2509.26398}, 
       img={assets/img/publications/imagedifficultyawareevaluationsuperresolutionmodels.jpg},
       poster={assets/pdf/imagedifficultyawareevaluationsuperresolutionmodels.pdf},
