Supplemental-->supplemenatary, default link is project page, if not available, to arXiv abs

--- a/publication_list.bib
+++ b/publication_list.bib
@@ -17,7 +17,7 @@
       year={2025},
       booktitle   =  ARXIV,
       html={https://atakan-topaloglu.github.io/oraclegs/},
-      pdf={https://arxiv.org/pdf/2509.23258}, 
+      pdf={https://arxiv.org/abs/2509.23258}, 
       img={assets/img/publications/oraclegs.jpg},
       supp={assets/pdf/oraclegs_supp.pdf},
       
@@ -32,7 +32,7 @@
       booktitle   =  ICIPW,
       primaryClass={cs.CV},
       html={}, 
-      pdf={https://arxiv.org/pdf/2509.26398}, 
+      pdf={https://arxiv.org/abs/2509.26398}, 
       img={assets/img/publications/imagedifficultyawareevaluationsuperresolutionmodels.jpg},
       poster={assets/pdf/imagedifficultyawareevaluationsuperresolutionmodels.pdf},
       video={https://youtu.be/0orSH7C6W8o},
