Added WACV accepted OracleGS

--- a/publication_list.bib
+++ b/publication_list.bib
@@ -14,8 +14,8 @@
 @misc{topaloglu2025oraclegsgroundinggenerativepriors,
       title={OracleGS: Grounding Generative Priors for Sparse-View Gaussian Splatting}, 
       author={Atakan Topaloglu and Kunyi Li and Michael Niemeyer and Nassir Navab and A. Murat Tekalp and Federico Tombari},
-      year={2025},
-      booktitle   =  ARXIV,
+      year={2026},
+      booktitle   =  WACV,
       html={https://atakan-topaloglu.github.io/oraclegs/},
       pdf={https://arxiv.org/abs/2509.23258}, 
       img={assets/img/publications/oraclegs.jpg},
